--- a/main.html
+++ b/main.html
@@ -4,11 +4,57 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>Apple Varieties - Grocery Store</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/styles.css">
+	<style>
+		/* Add custom styling for price and color variants */
+		.price {
+			font-size: 24px;
+			color: #f00;
+			font-weight: bold;
+		}
+
+		.price span {
+			font-size: 30px;
+		}
+
+		.variant ul {
+			display: flex;
+			justify-content: space-around;
+			padding: 0;
+			list-style: none;
+		}
+
+		.variant li img {
+			width: 50px;
+			height: 50px;
+			cursor: pointer;
+		}
+
+		.variant li img:hover {
+			border: 2px solid #000;
+			padding: 5px;
+		}
+
+		/* Main container styling */
+		.product {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			padding: 20px;
+		}
+
+		.product__photo {
+			width: 50%;
+		}
+
+		.product__info {
+			width: 45%;
+		}
+	</style>
 </head>
 
 <body>
@@ -27,12 +73,12 @@
 					<ul>
 						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302064/codepen/delicious-apples/green-apple2.png"
 								alt="green apple"></li>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303532/codepen/delicious-apples/half-apple.png"
-								alt="half apple"></li>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303160/codepen/delicious-apples/green-apple-flipped.png"
-								alt="green apple"></li>
-						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537303708/codepen/delicious-apples/apple-top.png"
-								alt="apple top"></li>
+						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302752/codepen/delicious-apples/yellow-apple.png"
+								alt="yellow apple"></li>
+						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302427/codepen/delicious-apples/orange-apple.png"
+								alt="orange apple"></li>
+						<li><img src="https://res.cloudinary.com/john-mantas/image/upload/v1537302285/codepen/delicious-apples/red-apple.png"
+								alt="red apple"></li>
 					</ul>
 				</div>
 			</div>
@@ -43,7 +89,7 @@
 				<span>CODE: 45999</span>
 			</div>
 			<div class="price">
-				R$ <span>7.93</span>
+				<span>$7.93</span>
 			</div>
 			<div class="variant">
 				<h3>SELECT A COLOR</h3>
@@ -59,10 +105,18 @@
 				</ul>
 			</div>
 			<div class="description">
-				
+				<h3>BENEFITS</h3>
+				<ul>
+					<li>High in vitamins and minerals.</li>
+					<li>Boosts the immune system.</li>
+					<li>Helps in digestion and weight loss.</li>
+					<li>Rich in fiber, great for heart health.</li>
+				</ul>
 			</div>
+			<button class="add-to-cart">ADD TO CART</button>
 		</div>
 	</section>
 </body>
 
 </html>
+
